Refactor - remove unused imports